--- a/templates/apps/login.html
+++ b/templates/apps/login.html
@@ -21,12 +21,7 @@
     </form>
 
 {% else %}
-
-{#    <a href="{% provider_login_url 'facebook' %}">#}
-{#        Facebook#}
-{#    </a>#}
     <br>
-
     <a href="{% provider_login_url 'google' %}">
         Google
     </a>
@@ -37,9 +32,10 @@
     </a>
     <br>
     <br>
-{#    <a href="{% provider_login_url 'telegram' %}">#}
-{#        Telegram#}
-{#    </a>#}
+    <a href="{% provider_login_url 'telegram' %}">
+        {% csrf_token %}
+        Telegram
+    </a>
 {% endif %}
 
 </body>
